# flutter-skill

./: .gitignore  .pubignore  ADVANCED_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CONNECTION_TROUBLESHOOTING.md  DTD_VS_VMSERVICE_PORTS.md  OPTIMIZATION_SUMMARY.md  PROTOCOL_INTEGRATION_EXAMPLE.md  README.md  SKILL.md  USAGE_GUIDE.md  install.ps1  install.sh  pubspec.yaml  server.json  uninstall.ps1  uninstall.sh
.github/workflows/: devcontainer-feature.yml  release.yml
assets/: description-intellij.html
demo_app/test/: widget_test.dart
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  COMMUNICATION_FLOW.md  FLUTTER_3X_FIX.md  IDE_SETUP.md  MULTI_SIMULATOR_TESTING.md  ROADMAP.md  TOOL_PRIORITY_SETUP.md  TWITTER_SETUP.md  UI_IMPLEMENTATION_ROADMAP.md  UI_UX_DESIGN_GUIDE.md
docs/releases/: MULTI_SESSION_IMPLEMENTATION_REPORT.md  RELEASE_NOTES_v0.4.0.md  v0.3.2_AUTO_VM_SERVICE.md
docs/research/: DTD_PROTOCOL_DETAILS.md  DTD_PROTOCOL_RESEARCH.md
example/: example.dart
homebrew/: flutter-skill.rb
intellij-plugin/: README.md  build.gradle.kts  install_local.sh
lib/: flutter_skill.dart  flutter_skill_semantic_refs.dart  flutter_skill_web_interop.dart  flutter_skill_web_stub.dart
native/cdp-engine/: Cargo.toml
native/cdp-engine/src/: cdp.rs  main.rs  ops.rs  pool.rs  server.rs  workflow.rs
npm/: README.md  package.json
scripts/: release.sh  sync_docs.dart
snap/: snapcraft.yaml
test/: mock_app.dart  multi_session_test.dart
test_app/: .metadata  pubspec.yaml
tests/: integration_test.dart
vscode-extension/: README.md  package-lock.json  package.json
(+187 files in other folders)
