[package]
name = "fs-cdp"
version = "0.1.0"
edition = "2021"
description = "High-performance CDP browser engine for flutter-skill"

[[bin]]
name = "fs-cdp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
# hyper removed — using raw TCP for minimal HTTP

[profile.release]
opt-level = 3
lto = true
strip = true
